[package]
name = "semanticscholar"
version = "0.1.0"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2021"
description="A wrapper around the [Semantic Scholar](https://www.semanticscholar.org/) API"
repository="https://github.com/magnusmanske/semanticscholar"
keywords=["semanticscholar","api","publications","papers","science"]
categories=["api-bindings","science"]
license="MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }

[dev-dependencies]
tokio = { version = "^1", features = ["full"] }
